# HPC-project

./: HPC_Report.docx  analyze_hotspots.py  gmon.out  matrix_ops_debug  matrix_ops_profile  profiling_setup.sh
image processing/: sequential_image_processing.c
image_processing/: .gitignore  Makefile  README.md  cuda_kernels.cu  gmon.out  hpc_plots.py  hybrid_cuda_simple.lib  hybrid_processing.c  image_processor_api.c  parallel_image_processing.c  profile_O0.txt  profile_O3.txt  sequential_image_processing.c
image_processing/backend/: package-lock.json  package.json  server.js
image_processing/frontend/: package-lock.json  package.json
image_processing/frontend/public/: index.html
image_processing/frontend/src/: App.css  App.js
image_processing/frontend/src/components/: FilterPanel.css  FilterPanel.js  ImageDisplay.css  ImageDisplay.js  ImageUpload.css  ImageUpload.js  ProcessingHistory.css  ProcessingHistory.js
image_processing/gprof reports/: profile_O2.txt
image_processing/image-processing-pipeline/: BUILD.md  CMakeLists.txt  Makefile  README.md  docker-compose.yml  setup.sh
image_processing/image-processing-pipeline/.github/workflows/: ci.yml
image_processing/image-processing-pipeline/docker/: Dockerfile
image_processing/image-processing-pipeline/scripts/: build_llvm.sh
image_processing/image-processing-pipeline/src/: sequential_image_processing.c
image_processing/image-processing-pipeline/tests/: CMakeLists.txt  test_image_processing.c  test_performance.c
image_processing/metrics plot/: hpc_all_metrics_plots.py  type1_execution_time.py
matrix/: Readme.md  matrix_ops.c
matrix/results/: O3_optimized_profile.txt  O3_optimized_time.txt  hotspot_analysis.txt  sequential_time.txt
optimized/: matrix_ops_O2  matrix_ops_O3
results/: O2_optimized_output.txt  O2_optimized_profile.txt  O2_optimized_time.txt  O3_optimized_output.txt  performance_summary.txt  sequential_output.txt  sequential_profile.txt  sequential_time.txt
